fixed bug with invisible switches in things filter

--- a/content/css/app.css
+++ b/content/css/app.css
@@ -5169,13 +5169,13 @@ ul.notifications {
 
 /* ****************************   Map Sidepanel  **************************** */
 
-.custom-control {
+/* .custom-control {
   top: 20px;
   right: 20px;
   width: 70px;
   height: 70px;
   background: no-repeat url('http://openlayers.org/en/latest/examples/resources/logo-70x70.png')
-}
+} */
 
 
 
@@ -5687,4 +5687,9 @@ span.rz-pointer {
 .opendisclaimer-disabled{
   left: -50px;
   transition: all 1s ease;
+}
+
+
+.custom-control-label {
+  padding-top: 0.25rem;
 }
